# global_teleoperation

./: .gitignore  pyproject.toml
ros2_ws/src/teleop_bridge/launch/: teleop_bridge.launch.py
ros2_ws/src/teleop_bridge/teleop_bridge/: camera_bridge.py  follower_bridge.py  leader_bridge.py
src/teleop/video/: camera.py  publisher.py  ws_publisher.py
ui/: tsconfig.tsbuildinfo
ui/app/: globals.css  page.tsx
ui/lib/: webrtc.ts
