[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teleop"
version = "0.1.0"
description = "Real-time leader–follower teleoperation for a 6DOF robotic arm."
readme = "README.md"
requires-python = ">=3.8"
# Assuming Apache-2.0 based on license headers in the provided files
license = { text = "Apache-2.0" }

# Add core dependencies here if you identify any that are always required.
# For example:
# dependencies = [
#     "numpy",
# ]

[project.optional-dependencies]
# For the cloud signaling server and WebSocket transport
# From render.yaml: pip install -e ".[api]"
api = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]
# For Zenoh transport
zenoh = ["eclipse-zenoh"]
# For WebRTC video streaming
# From src/teleop/video/publisher.py
video = [
    "aiortc",
    "av",
    "websockets",
]
# For convenience, to install all optional features
all = [
    "teleop[api]",
    "teleop[zenoh]",
    "teleop[video]",
]

[tool.setuptools.packages.find]
where = ["src"]